--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gestion_alumnos
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+# MongoDB (adjust URI/credentials as needed)
+spring.data.mongodb.uri=mongodb://localhost:27017/gestionalumnos
