fixed compilation errors

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
             <version>24.7.2</version>
+        </dependency>
 
         <!-- ACTUATOR -->
         <dependency>
